https://github.com/andgineer/lexiflux/issues/75 collaspse button

--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -9,6 +9,10 @@
             {% include 'hamburger.html' with current_page='reader' %}
           </div>
 
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+             <span class="navbar-toggler-icon"></span>
+          </button>
+
           <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
