--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -47,19 +47,24 @@
               overflow-x: visible;
             }
 
-            #lexical-panel.collapse:not(.show) {
-                display: none !important;
+            #lexical-panel {
+                max-height: 30vh;
+                overflow-y: auto;
             }
 
-            @media (max-width: 767.98px) {
+            @media (min-width: 768px) {
                 .flex-md-row {
-                    flex-direction: column !important;
+                    flex-direction: row !important;
                 }
 
                 #lexical-panel {
-                    width: 100%;
-                    order: -1;
+                    max-height: none;
+                    height: 100%;
                 }
+            }
+
+            #lexical-panel.collapse:not(.show) {
+                display: none !important;
             }
 
             #lexical-panel-button[aria-expanded="true"] #lexical-panel-icon::before {
