--- a/lexiflux/templates/library.html
+++ b/lexiflux/templates/library.html
@@ -29,6 +29,7 @@
                                     <th>Title</th>
                                     <th>Author</th>
                                     <th>Last Read</th>
+                                    <th>Progress</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
@@ -42,6 +43,14 @@
                                     </td>
                                     <td>{{ book.author.name }}</td>
                                     <td>{{ book.formatted_last_read }}</td>
+                                    <td>
+                                      <div class="d-flex align-items-center">
+                                        <div class="progress flex-grow-1 me-2" style="height: 10px;">
+                                          <div class="progress-bar" role="progressbar" :style="{ width: getProgressWidth({{ book.last_position_percent }}) }" :aria-valuenow="{{ book.last_position_percent|floatformat:0 }}" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                        <span class="small">{{ book.last_position_percent|floatformat:0 }}%</span>
+                                      </div>
+                                    </td>
                                     <td>
                                         <button class="btn btn-outline-secondary btn-sm" @click="editBook('{{ book.id }}')">
                                             Edit
@@ -366,6 +375,9 @@
                 console.error('Error:', error);
                 this.deleteErrorMessage = error;
               });
+            },
+            getProgressWidth(progress) {
+              return `${progress}%`;
             },
         }
     });
