https://github.com/andgineer/lexiflux/issues/20 TranslationHistory table Add translated words to history refactored working with context in LLM

--- a/lexiflux/templates/language-preferences.html
+++ b/lexiflux/templates/language-preferences.html
@@ -216,7 +216,7 @@
                            Prompt
                            <textarea v-model="form.parameters.prompt" class="form-control" rows="6" :placeholder="aiPromptPlaceholder"></textarea>
                            <small class="form-text text-muted">
-                              Available fields: {text_language}, {detected_language}, {user_language}, [WORD_START], [WORD_END], [SENTENCE_START], [SENTENCE_END]
+                              Available fields: {text_language}, {detected_language}, {user_language}, [HIGHLIGHT], [/HIGHLIGHT], [FRAGMENT], [/FRAGMENT]
                            </small>
                          </div>
                        </div>
