--- a/lexiflux/templates/hamburger.html
+++ b/lexiflux/templates/hamburger.html
@@ -7,5 +7,6 @@
     <li><a class="dropdown-item {% if current_page == 'library' %}text-secondary{% endif %}" href="{% url 'library' %}">Library</a></li>
     <li><a class="dropdown-item {% if current_page == 'reader' %}text-secondary{% endif %}" href="{% url 'reader' %}">Reader</a></li>
     <li><a class="dropdown-item {% if current_page == 'ai-settings' %}text-secondary{% endif %}" href="{% url 'ai-settings' %}">AI Settings</a></li>
+    <li><a class="dropdown-item {% if current_page == 'words-export' %}text-secondary{% endif %}" href="{% url 'words-export' %}">Words Export</a></li>
   </ul>
 </div>
