--- a/lexiflux/templates/words-export.html
+++ b/lexiflux/templates/words-export.html
@@ -63,6 +63,10 @@
                                     Anki File
                                 </label>
                             </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" v-model="exportMethod" id="csvFile" value="csvFile">
+                                <label class="form-check-label" for="csvFile">CSV File</label>
+                            </div>
                         </div>
 
                         <div class="mt-4">
