--- a/lexiflux/templates/words-export.html
+++ b/lexiflux/templates/words-export.html
@@ -17,7 +17,11 @@
             <div class="col-md-8">
                 <div class="card shadow">
                     <div class="card-body">
-                        <div v-if="errorMessage" class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <div v-if="successMessage" v-html="successMessage" class="alert alert-success alert-dismissible fade show" role="alert">
+                            ${ successMessage }
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        <div v-if="errorMessage" v-html="errorMessage" class="alert alert-danger alert-dismissible fade show" role="alert">
                             ${ errorMessage }
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
