--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -33,6 +33,11 @@
                   {% endfor %}
                 </ul>
               </li>
+              <li class="nav-item">
+                  <button id="search-button" class="btn btn-outline-secondary ms-2" type="button" title="Search">
+                    <i class="bi bi-search me-1"></i>Search
+                  </button>
+              </li>
             </ul>
             <button id="lexical-panel-button" class="btn btn-primary" type="button"
                     data-bs-toggle="collapse" data-bs-target="#lexical-panel"
@@ -94,18 +99,84 @@
             </div>
         </div>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between navbar-fixed-bottom">
-            <button class="btn btn-primary" id="prev-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Up">
-                <i class="bi bi-caret-left-fill"></i>
-            </button>
-            <div class="text-truncate" id="page-number">
-                {{ page.number }}
+        <nav class="navbar navbar-expand-sm navbar-light bg-light navbar-fixed-bottom">
+            <div class="container-fluid px-0">
+                <button class="btn btn-primary" id="prev-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Up">
+                    <i class="bi bi-caret-left-fill"></i>
+                </button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#reading-progress" aria-controls="reading-progress" aria-expanded="false" aria-label="Toggle">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="reading-progress" class="collapse navbar-collapse justify-content-center">
+                    <div class="col-4">
+                        <ul class="navbar-nav d-flex align-items-center mb-0 w-100">
+                            <li class="nav-item">
+                                <button id="page-number" class="btn btn-outline-primary btn-sm d-flex align-items-center me-2" title="Go to page">
+                                    <span class="page-number-text fw-bold me-1">{{ page.number }}</span>
+                                    <i class="bi bi-arrow-up-right-circle"></i>
+                                </button>
+                            </li>
+                            <li class="nav-item flex-grow-1">
+                                <div class="progress w-100">
+                                    <div id="progress-bar" class="progress-bar bg-info progress-bar-striped"
+                                         role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </li>
+                            <li class="nav-item text-nowrap">
+                                <span id="total-pages" class="ms-2">/ {{ book.pages.count }}</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <button class="btn btn-primary" id="next-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Down">
+                    <i class="bi bi-caret-right-fill"></i>
+                </button>
             </div>
-            <button class="btn btn-primary" id="next-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Down">
-                <i class="bi bi-caret-right-fill"></i>
-            </button>
         </nav>
     </div>
+
+    <!-- Go to Page Modal -->
+    <div id="goToPageModal" class="modal" aria-hidden="true" aria-labelledby="goToPageModalLabel" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 id="goToPageModalLabel" class="modal-title">Go to Page</h5>
+            <button type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <label for="pageNumberInput">Enter page number (1-<span id="maxPageNumber"></span>):</label>
+            <input type="number" id="pageNumberInput" min="1" required>
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="goToPageSubmit" class="btn btn-primary">Go</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Search Modal -->
+    <div id="searchModal" class="modal" aria-hidden="true" aria-labelledby="searchModalLabel" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 id="searchModalLabel" class="modal-title">Search</h5>
+            <button type="button" class="close" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <label for="searchInput">Enter search term:</label>
+            <input type="text" id="searchInput" required>
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="searchSubmit" class="btn btn-primary">Search</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="{% static 'lexiflux/bundle.js' %}"></script>
 {% endblock %}
 
