--- a/lexiflux/templates/reader.html
+++ b/lexiflux/templates/reader.html
@@ -54,6 +54,7 @@
                 <div id="words-container">
                     {{ pageHtml|safe }}
                 </div>
+                <div id="empty-space"></div>
             </div>
 
             <div id="lexical-panel" class="collapse d-md-block col-md-6 col-lg-4 order-1 order-md-2 h-md-100">
@@ -101,9 +102,11 @@
 
         <nav class="navbar navbar-expand-sm navbar-light bg-light navbar-fixed-bottom">
             <div class="container-fluid px-0">
-                <button class="btn btn-primary" id="prev-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Up">
-                    <i class="bi bi-caret-left-fill"></i>
-                </button>
+                <div class="ms-2">
+                    <button class="btn btn-primary" id="prev-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Up">
+                        <i class="bi bi-caret-left-fill"></i>
+                    </button>
+                </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#reading-progress" aria-controls="reading-progress" aria-expanded="false" aria-label="Toggle">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -128,9 +131,11 @@
                         </ul>
                     </div>
                 </div>
-                <button class="btn btn-primary" id="next-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Down">
-                    <i class="bi bi-caret-right-fill"></i>
-                </button>
+                <div class="me-2">
+                    <button class="btn btn-primary" id="next-button" data-bs-toggle="tooltip" data-bs-placement="top" title="Down">
+                        <i class="bi bi-caret-right-fill"></i>
+                    </button>
+                </div>
             </div>
         </nav>
     </div>
